Created testing commands.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,6 @@ commands:
   lpdebug:
     description: Command can only be executed on the console. Shows debugging information for this plugin
     usage: /<command>
+  lptest:
+    description: testing command
+    usage: /<command>
